# nivida

./: .commit_msg_tmp  .gitignore  Makefile  README.md  codex_takeover_plan.md  kaggle_overview.html  pyproject.toml  requirements.txt
artifacts/: chat_template_probe.json
configs/: data.yaml  data_official.yaml  eval.yaml  research_breakout_candidates.json  round1_lora_target_sweep.yaml  round1_stage3_longtrace_repair.yaml  synth.yaml  synth_hard_triads.yaml  train_lora.yaml  train_lora_official.yaml  train_lora_official_full_runpod.yaml  train_lora_smoke.yaml  train_lora_stage3_repair.yaml  train_stage1_format.yaml  train_stage1_format_smoke.yaml  train_stage2_bit_rescue.yaml  train_stage2_bit_rescue_v2.yaml  train_stage2_eq_bit_rescue.yaml  train_stage2_eq_bit_rescue_v2.yaml  train_stage2_equation_rescue.yaml  train_stage2_equation_rescue_v2.yaml  train_stage2_final_answer_weighted.yaml  train_stage2_mixed_answer_short.yaml  train_stage2_official_balanced_answer_only.yaml  train_stage2_official_balanced_short_trace.yaml  train_stage2_rank64_answer_only.yaml  train_stage2_selected_trace.yaml  train_stage2_selected_trace_subtype_rescue.yaml  train_stage2_thin.yaml  train_stage2_thin_answer_only.yaml  train_stage2_thin_short_trace.yaml  train_stage3_repair.yaml
docs/: artifact_naming.md  bit_permutation_diagnostic_latest.md  blackwell_managed_training.md  branch_compare_runbook.md  equation_template_diagnostic_latest.md  h100_smoke_runbook.md  handover.md  harness_alignment.md  nemotron_087_strategy.md  nemotron_lora_next_round.md  nemotron_lora_status_20260424.md  (+6 more)
(+235 files in other folders)
